@@ -32,7 +32,7 @@ using namespace std;
 
 int main(int argc, char *argv[])
 {
-    version = 120827;
+    version = 121002;
 
     readArguments(argc, argv);
     int time1 = time(0);
@@ -714,7 +714,7 @@ void printHelp(bool complete)
         cout<<"  -d2=sequence_file-2 (in FASTA format)"<<endl;
         cout<<"  -t1=tree_file_1 [if not provided, generate NJ tree]"<<endl;
         cout<<"  -t2=tree_file_2 [if not provided, generate NJ tree]"<<endl;
-        cout<<"  -mergedist=# [default: "<<defaultBranchLength<<"]"<<endl;
+        cout<<"  -mergedist=# [if no tree provided; default: "<<defaultBranchLength<<"]"<<endl;
     }
     cout<<"\n model parameters:"<<endl;
     cout<<"  +F or -F [force insertions to be always skipped]"<<endl;
