@@ -1,3 +1,8 @@
+v.121002
+- Alignment merge now accepts trees such as "(t1:#.#,t2:#.#);".
+  Provided with "-t=filename" or "-tree=tree-string".
+
+
 v.120827
 - All files now under the GPL licence.
 
